--- a/app/src/main/res/layout/registro_usuario.xml
+++ b/app/src/main/res/layout/registro_usuario.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#303030">
+    android:background="#FFFEFE">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -27,7 +27,7 @@
             android:fontFamily="sans-serif"
             android:text="REGISTRO"
             android:textAlignment="center"
-            android:textColor="#FFFFFF"
+            android:textColor="#000000"
             android:textSize="48sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -54,7 +54,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
 
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#000000"
         android:ems="10"
         android:hint="Correo electronico"
         android:inputType="textEmailAddress"
@@ -71,11 +71,12 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="76dp"
         android:layout_marginEnd="32dp"
+        android:backgroundTint="#000000"
         android:ems="10"
-        android:hint="Nombre"
 
-        android:backgroundTint="#FFFFFF"
+        android:hint="Nombre"
         android:inputType="textPersonName"
+        android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -89,10 +90,10 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
+        android:backgroundTint="#000000"
         android:ems="10"
-        android:hint="Usuario"
 
-        android:backgroundTint="#FFFFFF"
+        android:hint="Usuario"
         android:inputType="textPersonName"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +108,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#000000"
         android:ems="10"
         android:hint="Contraseña"
         android:inputType="textPassword"
@@ -127,6 +128,7 @@
         android:layout_marginBottom="79dp"
         android:background="@drawable/buttonrounded"
         android:text="REGISTRAR"
+        android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/cancelar"
@@ -143,6 +145,7 @@
         android:layout_marginBottom="79dp"
         android:background="@drawable/buttonrounded"
         android:text="CANCELAR"
+        android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -157,7 +160,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#000000"
         android:ems="10"
         android:hint="Apellidos"
         android:inputType="textPersonName"
